Fix freelancer skill badge wrap

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -580,6 +580,7 @@ width: 120px; margin: 2em auto .5em; display: block;
 	text-decoration: none;
 	text-transform: uppercase;
 	letter-spacing: .075em;
+	display: inline-block;
 }
 
 
